# ros2-autonomous-turtle-robot

./: .gitignore  README.md  vm_and_cyclonedds_setup.md
.kiro/: navigation_debug_context.md
firmware/: CMakeLists.txt  README.md
firmware/.cache/clangd/index/: action_client.h.C7CDFC8C4AFA391C.idx  action_client.h.D9E9570316884B7C.idx  action_goal_handle.h.E74A204C6E318059.idx  action_server.h.13D6F18130FA3362.idx  action_server.h.D500122F33E5F9BF.idx  action_type_support_struct.h.117A997C1B0F6726.idx  allocator.h.2FFDD31C5B301582.idx  allocator.h.9D103D015BCBF2A8.idx  array_list.h.BC8432128206B9E3.idx  cancel_goal.h.8B94B417095B1517.idx  cancel_goal__functions.h.0732BBB75E97F429.idx  cancel_goal__struct.h.B4D49C92036F8C3E.idx  cancel_goal__type_support.h.07D20948343D40E6.idx  char_array.h.A8E337D1E8AE6DD0.idx  client.h.8CD2CADEDC9762BD.idx  client.h.CE7B9DA22FDBC395.idx  communication.h.F54A3679713DF23D.idx  config.h.07217C10F1F87227.idx  config.h.5B192EB9ED5A9448.idx  config.h.6C8680F4184158DB.idx  configuration_flags.h.A85C08958D6C1E15.idx  context.h.5D81C1F870856CBE.idx  continous_serialization.h.D71A6CCAAA098D76.idx  custom_transport.h.BBF1C56333EBC344.idx  custom_transport.h.E562270845C0D0DA.idx  default_qos.h.E4BC5E9FDB91482D.idx  discovery_options.h.8825A9052917EC71.idx  domain_id.h.5C9944CFB237CE23.idx  domain_id.h.E28CE71D9785847E.idx  dynamic_data.h.AA5DD773C6A7AEFB.idx  dynamic_message_type_support.h.52EAFAF2E1F5B0D0.idx  dynamic_message_type_support_struct.h.6E7D751108CBE95D.idx  dynamic_type.h.3A9213B01019A82F.idx  error_handling.h.7918F4DF699E06A6.idx  error_handling.h.D6BEE7834EB887F4.idx  event.h.0AA2B140F51548D1.idx  event.h.9857A1E499ED3405.idx  event_callback.h.2E5E6A38D983253D.idx  event_callback_type.h.71E633EE8D54FEBD.idx  events_statuses.h.222D27272400AF9B.idx  (+162 more)
firmware/src/: main.c  md25.c  md25.h
turtlebot_bringup/: README.md  package.xml  setup.cfg  setup.py
turtlebot_bringup/launch/: bringup.launch.py
turtlebot_bringup/turtlebot_bringup/: diff_drive_odom.py  encoder_to_joint_states.py  twist_relay.py
turtlebot_description/: CMakeLists.txt  README.md  package.xml
turtlebot_description/launch/: display.launch.py
turtlebot_description/rviz/: display.rviz
turtlebot_description/urdf/: turtlebot.urdf.xacro
turtlebot_navigation/: CMakeLists.txt  README.md  package.xml
turtlebot_navigation/config/: nav2_params.yaml
turtlebot_navigation/launch/: navigation.launch.py  slam_navigation.launch.py
turtlebot_navigation/rviz/: navigation.rviz
turtlebot_slam/: CMakeLists.txt  README.md  package.xml
turtlebot_slam/config/: depthimage_to_laserscan.yaml  slam_toolbox_params.yaml
turtlebot_slam/launch/: save_map.launch.py  slam_mapping.launch.py
turtlebot_slam/rviz/: slam.rviz
