<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_slam</name>
  <version>0.1.0</version>
  <description>SLAM mapping launch files and configuration for the autonomous turtlebot</description>
  <maintainer email="omar@todo.com">Omar Veiga</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
